Renamed the library to easyXDM to avoid being associated with the XSS-vulnerability Alle references to easyXSS can be replaced with easyXDM The communication protocol has not changed, so easyXDM 1.4.0 is 100% compatible with easyXSS 1.4.0
Signed-off-by: Sean Kinsey <oyvind@kinsey.no>

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -1,15 +1,46 @@
 <div id="welcome">
     <div class="col">
-        <div id="search">     	
+        <div id="search">
         </div>
+        easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. 
+        <br/>
+        This is perfect if you plan to provide a client-side API on your web site as you can expose a method in as little as 10 lines of code.
+        <br/>
+        <br/>
+        In addition, you dont have to provide a full client library to the consumers, you can just tell them the location of your easyXDM-endpoint, 
+        and then show them the interface they will have to implement - and this can be as small as 1 line for a one-method interface! 
+        <br/>
+        <br/>
+        Demos
+        <ul>
+            <li>
+                <a href="http://consumer.easyxss.net/example/transport.html">Sending plain string messages using the easyXDM.Transport.BestAvailableTransport class</a>
+            </li>
+            <li>
+                <a href="http://consumer.easyxss.net/example/data.html">Sending data (objects)  using the easyXDM.Channel class</a>
+            </li>
+            <li>
+                <a href="http://consumer.easyxss.net/example/methods.html">Exposing and invoking methods using the easyXDM.Interface class</a>
+            </li>
+            <li>
+                <a href="http://consumer.easyxss.net/example/index.html">Bridging two web applications</a>
+            </li>
+        </ul>
+		<br/>
+		<br/>
+		The library is created and maintained by &Oslash;yvind Sean Kinsey, <a href="http://kinsey.no/blog">http://kinsey.no/blog</a>.
     </div>
     <div class="col-last">
         <div class="res-block">
             <div class="res-block-inner">
                 <h3>Additional Resources</h3>
                 <ul>
-                    <li><a href="http://easyxss.net/" target="_blank">The easyXSS homepage</a></li>
-                    <li><a href="http://github.com/oyvindkinsey/easyXSS/tree/master" target="_blank">The git repository</a></li>
+                    <li>
+                        <a href="http://easyxss.net/" target="_blank">The easyXDM homepage</a>
+                    </li>
+                    <li>
+                        <a href="http://github.com/oyvindkinsey/easyXDM/tree/master" target="_blank">The git repository</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -17,15 +48,31 @@
             <div class="res-block-inner">
                 <h3>Icon Legend</h3>
                 <ul id="legend" style="list-style:none;margin-left:0;">
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-pkg">Package</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-cls">Class</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-static">Singleton</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-cmp">Component</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-method">Method</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-prop">Property</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-config">Config Option</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-event">Event</li>
-		        </ul>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-pkg">Package
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-cls">Class
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-static">Singleton
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-cmp">Component
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-method">Method
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-prop">Property
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-config">Config Option
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-event">Event
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
